@@ -8,6 +8,7 @@
   * Add `-o` option: `--output` for `-D`.
   * Add `-N` option: `--no-rurienv`.
   * Add `-R` option: `--read-only`.
+  * Add `-M` option: `--ro-mount`.
   * Automatically unset $LD_PRELOAD before running container(Maybe will not work).
   * General bug fixes.
 # v2.7:
